--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@babel/cli": "^7.25.9",
     "@babel/plugin-transform-runtime": "^7.25.9",
+    "@ebereplenty/chatbot": "^1.0.1",
     "@react-google-maps/api": "^2.19.3",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
